--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tutorial",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "George H-S",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "mongoose": "^5.12.10",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sqlite3": "^5.0.2"
   }
 }
